fix: wrong gap on unauthenticated

--- a/src/components/SectionWithHeader/SectionWithHeader.module.css
+++ b/src/components/SectionWithHeader/SectionWithHeader.module.css
@@ -9,3 +9,8 @@
 .root > div {
   overflow: auto;
 }
+
+.emptyMessage {
+  padding-block: 0.75rem;
+  padding-inline: 0.5rem;
+}
